--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
