--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "axios": "^1.7.9",
+    "pinia": "^2.3.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-toastification": "^2.0.0-rc.5"
